EC2-Snapshot/Resources/security-group.tf
resource "aws_security_group" "SG" {
  name   = "SG"
  vpc_id = aws_vpc.vpc.id
  ingress {
    from_port   = 22
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
